--- a/HulluKyla/App.xaml
+++ b/HulluKyla/App.xaml
@@ -64,6 +64,10 @@
                 <AppThemeBinding Light="{StaticResource ControlBackgroundLight}"
                                  Dark="{StaticResource ControlBackgroundDark}" />
             </Setter>
+            <Setter Property="TitleColor">
+                <AppThemeBinding Light="{StaticResource TextColorLight}"
+                                 Dark="{StaticResource TextColorDark}" />
+            </Setter>
             <Setter Property="FontSize" Value="16" />
             <Setter Property="Margin" Value="0,5,0,5" />
             <Setter Property="HeightRequest" Value="40" />
