--- a/HulluKyla/Pages/HallintaPage.xaml
+++ b/HulluKyla/Pages/HallintaPage.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.HallintaPage"
-             Title="HallintaPage">
+             Title="Hallinta">
 
     <Grid Padding="20"
           RowDefinitions="*,Auto"
@@ -16,25 +16,25 @@
                              HorizontalOptions="Fill">
 
             <controls:ThreeDButton 
-                    Text="AsiakasLista"
+                    Text="Asiakas sivut"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="AsiakasListaPage"
                     WidthRequest="190"/>
 
             <controls:ThreeDButton 
-                    Text="AlueLista"
+                    Text="Alue sivut"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="AlueListaPage"
                     WidthRequest="190"/>
 
             <controls:ThreeDButton 
-                    Text="MokkiLista"
+                    Text="Mökki sivut"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="MokkiListaPage"
                     WidthRequest="190"/>
 
             <controls:ThreeDButton 
-                    Text="PalveluLista"
+                    Text="Palvelu sivut"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="PalveluListaPage"
                     WidthRequest="190"/>
