--- a/HulluKyla/Pages/SeurantaPage.xaml
+++ b/HulluKyla/Pages/SeurantaPage.xaml
@@ -1,13 +1,15 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
-             x:Class="HulluKyla.Pages.SeurantaPage">
+             x:Class="HulluKyla.Pages.SeurantaPage"
+             Title="Laskujen seuranta">
 
     <ScrollView>
-        <VerticalStackLayout Padding="10" Spacing="15">
+        <Grid RowDefinitions="*,*,Auto" Padding="20" RowSpacing="15">
+            
 
             <!-- Asiakasvalinta-alue -->
-            <Frame BorderColor="Gray" BackgroundColor="Transparent" CornerRadius="10" Padding="10">
+            <Frame Grid.Row="0" BorderColor="Gray" BackgroundColor="Transparent" CornerRadius="10" Padding="10">
                 <VerticalStackLayout Spacing="10">
                     <SearchBar x:Name="AsiakasSearchBar"
                                Placeholder="Etsi asiakasta..."
@@ -15,12 +17,12 @@
                                HorizontalOptions="Center"
                                WidthRequest="300"/>
                     <CollectionView x:Name="AsiakasListaView"
-                                    HeightRequest="200"
+                                    HeightRequest="300"
                                     SelectionMode="Single"
                                     SelectionChanged="AsiakasListaView_SelectionChanged">
                         <CollectionView.ItemTemplate>
                             <DataTemplate>
-                                <Frame Padding="10" Margin="0,5" BackgroundColor="Transparent" CornerRadius="10">
+                                <Frame Padding="10" BorderColor="Gray" Margin="0,5" BackgroundColor="Transparent" CornerRadius="10">
                                     <StackLayout>
                                         <Label Text="{Binding KokoNimi}"/>
                                         <Label Text="{Binding Email}" />
@@ -33,7 +35,7 @@
             </Frame>
 
             <!-- Laskut-alue -->
-            <Frame BorderColor="Gray" BackgroundColor="Transparent" CornerRadius="10" Padding="10">
+            <Frame Grid.Row="1" BorderColor="Gray" BackgroundColor="Transparent" CornerRadius="10" Padding="10">
                 <VerticalStackLayout Spacing="10">
 
                     <!-- Laskun moodi nappi -->
@@ -62,7 +64,6 @@
                                     <Label Text="{Binding LaskuId}" Grid.Column="0" VerticalOptions="Center"/>
                                     <Label Text="{Binding VarausId}"  Grid.Column="1" VerticalOptions="Center"/>
                                     <Label Text="{Binding Summa, StringFormat='{0:0.00} euroa'}"
-                                           TextColor="White"
                                            HorizontalTextAlignment="End"
                                            Grid.Column="2"
                                            VerticalOptions="Center"/>
@@ -81,19 +82,20 @@
                 </VerticalStackLayout>
             </Frame>
 
+
             <!-- Napit -->
-            <Grid ColumnDefinitions="*,*" Padding="10">
+            <Grid Grid.Row="2" ColumnDefinitions="*,*" Padding="10">
                 <!-- Etusivu-nappi -->
-                    <controls:ThreeDButton 
+                <controls:ThreeDButton
                         Text="Etusivu"
                         Clicked="Navigoi_Clicked"
                         CommandParameter="Etusivu"
                         HorizontalOptions="Start"
                         CornerRadius="10"
                         WidthRequest="100"/>
-                
+
                 <HorizontalStackLayout HorizontalOptions="End" Spacing="10" Grid.Column="1">
-                        <!-- Tulosta-nappi -->
+                    <!-- Tulosta-nappi -->
                     <controls:ThreeDButton 
                         Text="Tulosta"
                         Clicked="TulostaLasku_Clicked"
@@ -104,7 +106,7 @@
 
                     <!-- Merkitse maksetuksi-nappi -->
                     <controls:ThreeDButton 
-                        Text="Merkiste maksetuksi"
+                        Text="Merkitse maksetuksi"
                         Clicked="MerkitseMaksetuksi_Clicked"
                         x:Name="MerkitseMaksetuksiButton"
                         CornerRadius="10"
@@ -112,7 +114,6 @@
                         HorizontalOptions="End"/>
                 </HorizontalStackLayout>
             </Grid>
-        </VerticalStackLayout>
+        </Grid>
     </ScrollView>
-
 </ContentPage>
