--- a/HulluKyla/Pages/UusiPalveluPage.xaml
+++ b/HulluKyla/Pages/UusiPalveluPage.xaml
@@ -3,26 +3,28 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:controls="clr-namespace:HulluKyla.Models.Controls"
              x:Class="HulluKyla.Pages.UusiPalveluPage"
-             Title="UusiPalveluPage">
+             Title="Palvelun luonti">
 
     <Grid Padding="20"
-          RowDefinitions="0.8*,0.2*"
-          ColumnDefinitions="0.3*,0.4*,0.3*">
+          RowDefinitions="*,Auto">
 
         <!-- Uuden palvelun entryt -->
-        <StackLayout Grid.Row="0"
-                     Grid.Column="1"
-                     HorizontalOptions="Fill"
-                     VerticalOptions="Center" 
-                     Spacing="10" >
+        <StackLayout HorizontalOptions="Fill"
+                     VerticalOptions="Center"
+                     Spacing="10">
             <Picker x:Name="AluePicker" 
                     Title="Valitse palvelun alue" 
                     HeightRequest="70"
-                    ItemDisplayBinding="{Binding Nimi}" />
-            <Entry x:Name="NimiEntry" Placeholder="Palvelun nimi..." />
-            <Entry x:Name="KuvausEntry" Placeholder="Palvelun kuvaus..." HeightRequest="100" />
-            <Entry x:Name="HintaEntry" Placeholder="Palvelun hinta..." />
-            <Entry x:Name="AlvEntry" Placeholder="Palvelun arvolisävero..." />
+                    ItemDisplayBinding="{Binding Nimi}"/>
+            <Entry x:Name="NimiEntry" Placeholder="Palvelun nimi..." HeightRequest="50"/>
+            <Entry x:Name="KuvausEntry" Placeholder="Palvelun kuvaus..." HeightRequest="50"/>
+            <Entry x:Name="HintaEntry" Placeholder="Palvelun hinta..." HeightRequest="50"/>
+            <Entry x:Name="AlvEntry" Placeholder="Palvelun arvonlisävero..." HeightRequest="50"/>
+            <controls:ThreeDButton 
+                    Text="Lisää palvelu"
+                    Clicked="LisaaClicked"
+                    HorizontalOptions="Fill"
+                    HeightRequest="50"/>
         </StackLayout>
         
         <!-- Vasemman reunan napit -->
@@ -39,21 +41,10 @@
                     CommandParameter="Etusivu" />
 
             <controls:ThreeDButton 
-                    Text="Takaisin palveluihin"
+                    Text="Takaisin muokkaukseen"
                     Clicked="Navigoi_Clicked"
                     CommandParameter="PalveluListaPage" />
 
-
         </StackLayout>
-
-        <!-- Lisää-nappi oikeaan alakulmaan -->
-        <controls:ThreeDButton 
-                Grid.Row="1" Grid.Column="2"
-                Text="Lisää"
-                Clicked="LisaaClicked"
-                HorizontalOptions="End"
-                VerticalOptions="End"
-                Margin="0,20,0,0" />
-
     </Grid>
 </ContentPage>
